# llm_arena

./: .gitignore  README.md  config.toml.example  project-brief.prompt  pyproject.toml  run.sh  setup_venv.ps1  setup_venv.sh
llm_arena/: __init__.py  aggregation.py  config.py  elo.py  generation.py  judging.py  logging_ext.py  normalization.py  types.py  utils.py
llm_arena.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llm_arena/prompts/: judge_prompt.txt
llm_arena/providers/: base.py  openai_compat.py
scripts/: run_once.py
