[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-arena"
version = "0.1.1"
description = "Arena-style evaluation between multiple LLM providers via LiteLLM (with anonymous judging & Elo)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "jinja2>=3.1.4",
  "typer>=0.12.3",
  "rich>=13.7.0",
  "orjson>=3.10.0"
]

[project.scripts]
llm-arena = "scripts.run_once:app"

[tool.setuptools]
packages = ["llm_arena", "scripts"]
